Realizados todas las siguientes actualizaciones:
Luego de la reunion de revision de la aplicacion de sha se encontraron
los siguientes puntos a modificar:
limpiar la lista de sucursales (en base a la que esta en el archivo
adjunto)

cambiar el nombre "carga accidental" a "accidentes semanales"(tanto en
el titulo como en los botones asociados)

agregar antes del area un  autocomplete de sucursales igual al otro
listado y se llamara ("centro operativo donde ocurrio el
evento")(limitado a las sucursales del usuario)

cambiar area por: "area especifica donde ocurrieron los hechos"

cambiar texto de tipo de incapacidad a lo que esta escrito en el archivo
adjunto

colocar la limitacion de caracteres en el campo de descripcion de los
hechos a 2000

En el detalle del evento agregar todas las partes que se cargan arriba,
no solo la descripcion 

arreglado counter's y divididos para counter de admins y counter de
regulares.

arreglados algunos logos y orden de los menus en sentido alfabetico

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -13,7 +13,7 @@ loginuser = Para ingresar coloque usuario
 loginclave = Para ingresar coloque clave
 bizview = openbizview
 entrar = Login
-entrar2 = Carga accidental - Login
+entrar2 = Accidentes semanales - Login
 entrar1 = Iniciar Sesión
 saludo = Bienvenido:
 olvidocl = ¿Olvidó Contraseña?
@@ -21,7 +21,7 @@ confmailIngMail = Debe colocar una dirección de correo válida
 
 globalBasico = Básicos
 globalAdmin = Administración
-globalInci = Carga accidental
+globalInci = Accidentes semanales
 globalSeguridad = Seguridad
 globalMail = Tareas
 globalRep = Reportes
@@ -191,7 +191,7 @@ seg = Seguridad
  seg02 = Opciones roles
  seg03 = Usuarios
  tipac = Tipo de accidente
- seg08 = Acceso a reportes
+ seg08 = Metas de operadores
  seg09 = Acceso a botones
  seg04 = Accesos categoria 1
  seg05 = Accesos categoria 2
@@ -348,7 +348,7 @@ htmlbmailtareas = Busqueda por job o reporte
 htmlvalidate = Campo requerido
 htmlvalidatets = El formato de la tolerancia superior debe ser numérico. Ej: 123.45
 htmlvalidateti = El formato de la tolerancia inferior debe ser numérico. Ej: 123.45
-htmlvalidatemt = El formato de la meta debe ser numérico. Ej: 123.45
+htmlvalidatemt = El formato deL código debe ser numérico. Ej: 123
 htmlvalidatea = El formato del año debe ser numérico. Ej: 2016
 htmlvalidatem = El formato del mes debe ser numérico. Ej: 1
 htmlvalidatnum = El formato debe ser numérico. Ej: 123.45
@@ -363,9 +363,9 @@ sessionInst = Seleccione una instancia
 #Solicitar contraseña
 chgpass1 = Solicitud de contraseña
 chgpass3 = Solicitar contraseña
-mailUserUserChgPass = Solicitud de nueva contraseña para Carga Accidental
-mailNewUserMsj6 = <a style="font-weight: bold;">Esto es un correo automático por favor no responda<a/>.<br/><br/>A solicitado recuperación de contraseña para Carga Accidental, si desconce la operación contacte a su operados inmediato. Datos de usuario y contraseña:
-mailNewUserMsj2 = Saludos cordiales le envía el equipo de Carga Accidental.
+mailUserUserChgPass = Solicitud de nueva contraseña para Accidentes semanales
+mailNewUserMsj6 = <a style="font-weight: bold;">Esto es un correo automático por favor no responda<a/>.<br/><br/>A solicitado recuperación de contraseña para Accidentes semanales, si desconce la operación contacte a su operados inmediato. Datos de usuario y contraseña:
+mailNewUserMsj2 = Saludos cordiales le envía el equipo de Accidentes semanales.
 chgpass7 = Se ha enviado la nueva contraseña a su cuenta de correo
 
 
@@ -1221,18 +1221,21 @@ Shauserstbrol = Tipo usuario
 Shauserstbsuc = Sucursal
 Shauserstbdep = Departamento
 Shauserstbcar = Cargo
+Shauserstbspi = Sucursal asociada
 
 
 #---------------------------Shaincidencias
-Shaincidenciastit = Carga accidental
+Shaincidenciastit = Accidentes semanales
 tipactit = Tipo de accidentes
+shasuctit = Sucursales
 
 shaincidenciasci = Cédula de identidad: * 
 shaincidenciasge = Genero: *
 shaincidenciasca = Cargo: *
 shaincidenciasfe = Fecha y hora del evento: *
 shaincidenciastu = Turno: * 
-shaincidenciasar = Area: *
+shaincidenciasco = Centro operativo donde ocurrio el evento: *
+shaincidenciasar = Area especifica donde ocurrieron los hechos: *
 shaincidenciasti = Tipo de incapacidad: *
 shaincidenciasta = Tipo de accidente: *
 shaincidenciastl = Tipo de lesión: * 
@@ -1247,3 +1250,11 @@ Shaincidenciastblu = Lugar del evento
 Shaincidenciastbde = Detalles del evento
 Shaincidenciastbin = Código inpsasel
 Shaincidenciastbemp = Datos del empleado
+
+shainturno = Turno
+shainarea = Area donde ocurrieron los hechos
+shaintipoin = Tipo de incapacidad
+shaintipoac = Tipo de accidente
+shaintipole = Tipo de lesión
+shainubiles = Ubicación de la lesión
+shainhechos = Descripcion de los hechos
