cambio de titulos a Indicadores Sha.

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -13,7 +13,7 @@ loginuser = Para ingresar coloque usuario
 loginclave = Para ingresar coloque clave
 bizview = openbizview
 entrar = Login
-entrar2 = Accidentes semanales - Login
+entrar2 = Indicadores sha - Login
 entrar1 = Iniciar Sesión
 saludo = Bienvenido:
 olvidocl = ¿Olvidó Contraseña?
