Finalizado desarrollo de nuevos módulos de la aplicación de carga accidental y cambios a solicitud del Sr. Gustavo. junto con algunas actualizaciones para el mismo modulo, cambios como Agregar al personal de la nomina confidencial al listado de empleados, El campo tipo de lesión pasa a ser un autocomplete con una lista de tipos de lesion fija que el departamento de sha debe enviar, Antes del campo de inpsasel, se debe colocar un campo con la descripción “El accidente fue reportado:” que tenga un select simple de “si” o “no” Dependiendo de la eleccion del usuario, se le presentara un ultimo campo, el cual varia entre “Codigo inpsasel” y “Razon por la que no fue reportado” Nota: “Razón por la que no fue reportado” es un complete (CREARLE UN MAESTRO) Solo el usuario administrador puede editar y borrar En todas las ventas b.-Migrar aplicación de desarrollo a productivo (Por un tema en la conexión a baan en el servidor

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -11,7 +11,6 @@ logClUsr = |Usuario y/o contraseña inválidos|
 logClIntroUsr = Introduzca un usuario
 loginuser = Para ingresar coloque usuario
 loginclave = Para ingresar coloque clave
-bizview = openbizview
 entrar = Login
 entrar2 = Indicadores sha - Login
 entrar1 = Iniciar Sesión
@@ -19,38 +18,18 @@ saludo = Bienvenido:
 olvidocl = ¿Olvidó Contraseña?
 confmailIngMail = Debe colocar una dirección de correo válida
 
-globalBasico = Básicos
-globalAdmin = Administración
 globalInci = Accidentes semanales
 globalSeguridad = Seguridad
-globalMail = Tareas
-globalRep = Reportes
-globalDotacion = Dotación
-globalParrep = Parámetros para Reportes
-globalVentas = Ventas
-globalSGC000 = Gestión de la Calidad
-globalchart = Prueba gráficos
-globalCoyco = Contabilidad y Costos
-globalInd = Indicadores Directivos
+
 
 #dasboradInicial
 Bienvenido = Bienvenido
 dashVerDetalle = Ver detalle
-dashRep = Reportes dispobibles!
-dashTareas = Tareas programadas!
-dashUser = Usuarios registrados!
-dashRepImpr = Reportes impresos!
-dashRepTop = Los 5 reportes mas frecuentes
-dashNew = Nueva versión disponible para descargar
 
 #Titulo
-titulo = OPEN-BIZVIEW
-tituloAce = OPEN-BIZVIEW - ACERCA DE..
 os = Sistema Open Source. Prohibida su venta
 gnu = Licencia tipo: General Public Licence
 login = Iniciar sesión
-des = Desarrollado por DvConsultores C.A
-versionbiz = V.5.0
 menu = Menú
 filas = filas
 todas = todas
@@ -60,39 +39,14 @@ inh= Para inhabilitar debe seleccionar al menos un checkbox
 
 #Licencia
 fecha = FECHA:
-sistema = OPEN-BIZVIEW - 5.0
-sistema1 = Contenedor de Reportes e Indicadores BI.
-ace = Acerca de ...
 derechos = Todos los derechos reservados
-
 
 # Manejo de mensajes de inserción, modificación y eliminación de datos
 validacombosa = el codigo articulo no corresponde con el tipo de busqueda
 msnInsert = Se ha guardado el registro
-msnActpro = Se ha procesado la proyección exitosamente.
 msnPrimaryk = Registro duplicado
-sgc001dfk1 = Existen registros en historico de indicadores
-sgc001fk3 = Existen registros en maestro de indicadores
-sgc005fk = Existen registros en maestro de areas
-sgc009fk4 = Existen registros en acceso a indicadores
-sgc001afk4	= Existen registros en historico de metas
-sgc001bfk4	= Existen registros en historico de tolerancia inferior
-sgc001cfk4	= Existen registros en historico de tolerancia superior
-sgc003fk3 = Existen registros en historico de datos de FAG016
-sgc012fk3 = Existen registros en historico de datos de FAG017
-sgc012afk3 = Existen registros en historico de acciones de FAG017
-sgc012bfk3 = Existen registros en historico de archivos de soporte de FAG017
-sgc012cfk3 = Existen registros en historico de bitacoras de accion de FAG017
-sgc007fk1 = Existen registros en acceso a compañias
-sgc008fk2 = Existen registros en acceso a area
-sgc009fk2 = Existen registros en acceso a indicadores
 msnInsertUn = Código reservado por el sistema. Utilice otra nomenclatura
 msnUpdate = Registro modificado con éxito
-msnAprobado = Proyección aprobada con éxito
-msnHab = Articulo habilitado
-mensaje =
-detalle = Redirigiendo al detalle
-msnInh = Articulo inhabilitado
 msnDelete = Registro eliminado con éxito
 msnDeletes = Registros eliminados con éxito
 msnAccInsert = No está autorizado para crear registros
@@ -115,18 +69,6 @@ pntexRegs = Registros insertados con éxito
 noreg = El usuario no está registrado
 pntextFail = No se encontró el archivo: 
 pntextFail1 =  .  Intente de nuevo 
-noreg1 = Problemas para acceder al módulo de reportes. Por favor contacte a su proveedor
-Hmeta = Creación de combos
-Master = Creación de convenios
-Dott = Tipos de dotación
-Conve = Asociación convenio a empleados
-Combo = Asignación de combo a convenio
-Comboa = Combos artículos
-Frecu = Creación de frecuencias
-Busq = Tipos de busqueda
-Artb = Clasificación de articulo
-Calpro = Calculo de proyección
-
 
 # Validación de campos que no pueden ser nulos
 msnNoUpdate = No existen registros que coincidan para modificar
@@ -154,7 +96,6 @@ htmlupdate = Actualizar
 htmlborrar = Borrar
 htmlborrarModal = Si borrar
 htmlprocesar = Procesar
-htmlproye = Aprobar proyección
 
 #Páginar en todas las tablas
 rpag = Filas
@@ -171,59 +112,17 @@ de = de
 filas = Filas:
 
 #Menu
-bas = Básicos
- bas1 = Categoría 1
- bas2 = Categoría 2
- bas3 = Categoría 3
- bas4 = Categoría 4
- bas5 = Asociar Categorias
- bas6 = Calendario
- bas7 = Grupos de conceptos
- bas8 = Asociar conceptos
-adm = Administración
- adm1 = Subir reportes
- adm2 = Auditoria
- adm3 = Log de interface
 seg = Seguridad
- instancias = Instancias
- instanciasUsr = Instancias usuarios
  seg01 = Roles
  seg02 = Opciones roles
  seg03 = Usuarios
  tipac = Tipo de accidente
  seg08 = Metas de operadores
+ razon01 = Listado de Razones
  seg09 = Acceso a botones
- seg04 = Accesos categoria 1
- seg05 = Accesos categoria 2
- seg06 = Accesos categoria 3
- seg07 = Accesos categoria 4
-pres = Parametros de gastos
- pres01 = Agrupación cuentas
- pres02 = Plan de cuentas
- pres08 = Tipo de gasto
- pres03 = Dimensiones
- pres04 = Asociar dimensiones 
  pres05 = Compañías
- pres13 = Relación jerarquica gastos
- pres09 = Interfaz de aplicación
-pres_a = Planificación financiera 
- pres06 = Períodos de presupuesto
- pres07 = Definición de escenarios
- presventas = Planificación financiera 
- pres10 = Carga de base inicial ventas
- pres11 = Proyección de ventas
- pres12 = Calcular escenarios
-presplan = Planificación avícola 
- presplan01 = Proyección pollo engorde
- presplan02 = Proyección Cria/Repro
- presplan02A = Tipos de tabla consumo
- presplan02B = Tablas de consumo
 mail = Configuración mail
- mail02 = Grupos listas
  mail03 = Listas mail
- mail04 = Programar tarea 
-rep = Reportes
- rep01 = Grupos reportes
 salir = Salir
 vent = % Efectividad Visitas
 sgc001 = Maestro de creaciones
@@ -232,58 +131,8 @@ sgc003 = Carga de Datos
 sgc004 = Impresión
 sgc005 = Compañias
 sgc006 = Areas
- sgc007 = Acceso Compañias
- sgc008 = Acceso Areas
- sgc009 = Acceso Indicadores
  sgc010 = Administradores
-tubder09 = Creación de  frecuencia de medición
-tubder11 = Tipos de Valores
 par001 = Parámetros
-pre001 = Parámetros para reportes
-chart = Prueba de gráficos
-orf001 = Ordenes de fabricación
-coo001 = Control de ordenes
-indt = Parámetros
- indt01 = Lineas de Negocio		
- indt02 = Paises		
- indt03 = Empresas
- indt04 = Ubicaciones		
- indt05 = Seguridad Emp. / Ubi.		
- indt06 = Ubicaciones por empresa		
- indt07 = Lineas de producción		
- indt08 = Sectores de negocio		
- indt09 = Tipos de venta		
- indt10 = Tipos de inventario		
- indt11 = Tipos de rendimiento	
-indh = Producción
- indh01 = Producción Total
- indh02 = Producción por Linea		
- indh03 = Rendimiento
-indh0 = Ventas
- indh04 = Venta de Producto
- indh05 = Venta por Sector
- indh06 = Tipo de Ventas (%)
- indh07 = Pedidos y backorder
-indh00 = Inventarios
- indh08 = Stock Valorizado
-indh000 = Finanzas
- indh09 = Cartera
- indh17 = Deuda	
- indh18 = Liquidez	
-indh0000 = Balance
- indh10 = Precio de venta
- indh11 = Costo de venta
- indh12 = Gastos operativos
- indh13 = Gastos financieros
- indh14 = Margen bruto	
- indh15 = Margen neto	
- indh16 = Utilidad neta	
-indh00000 = Presupuesto
-	
-mnuindt = Parámetros de indicadores directivos
-mnucont = Parámetros de Contabilidad
-mnusgc = Parámetros de SGC
-	
 
 #Posiciones de Menu
 
@@ -312,17 +161,12 @@ html12 = no
 html13 = Siguiente
 html14 = Anterior
 html15 = Ejecutar
-html16 = Subir archvio
+html16 = Subir archivo
 html17 = Ejecutar Interfaz
 html18 = Eliminar registros de Interfaz
-html19 = Ejecutar presupuesto
 html20 = Cambiar contraseña
-html21 = Realizar carga inicial
-html22 = Depurar escenarios
-html23 = Aprobar escenarios
 html28 = de
 html29 = Busqueda global
-html30 = Pulse si desea volver a subir un reporte
 html31 = Esta operación elimina los registros seleccionados en forma definitiva y no se podrá deshacer. ¿Desea continuar?
 html32 = Información importante
 html36 = Busqueda global
@@ -342,12 +186,7 @@ html54 = Suficiente
 html55 = Fuerte
 html56 = Mínimo 8 caractéres
 html138 = No hay registros
-html154 = Selección de instancia
 htmlvalidate = Campo requerido
-htmlbmailtareas = Busqueda por job o reporte
-htmlvalidate = Campo requerido
-htmlvalidatets = El formato de la tolerancia superior debe ser numérico. Ej: 123.45
-htmlvalidateti = El formato de la tolerancia inferior debe ser numérico. Ej: 123.45
 htmlvalidatemt = El formato del código debe ser numérico. Ej: 123
 htmlvalidatea = El formato del año debe ser numérico. Ej: 2016
 htmlvalidatem = El formato del mes debe ser numérico. Ej: 01
@@ -376,27 +215,6 @@ chgpass7 = Se ha enviado la nueva contraseña a su cuenta de correo
 #--------------------------------------------------------------------------------------
 #-------------------------------------TABLAS--------------------------------------------
 #---------------------pntext-----------------------------------------------------------
-#---------------------------Contenedor
-pntexttit = Carga externa
-pntextreptit = Subir reportes
-
-pntexRuta = Ruta:
-pntexOpc = Opciones de carga:
-pntexRen = Renombrar:
-pntexInfo = Información de archivo cargado:
-pntexInfo1 = Información:
-pntexInfo1 = Nombre de archivo:
-pntexInfo2 = Archivo renombrado:
-pntexInfo3 = Información de archivo cargado:
-pntexInfo4 = Tipo:
-pntexInfo5 = Archivo origen:
-pntexInfo6 = Tamaño archivo:
-pntexInfo7 = Destino:
-pntexInfo8 = La carga ha sido exitosa
-pntexInfo9 = Error al momento de hacer la carga. Repita el proceso.
-
-# Validación Javascript (AJAX)
-pntexUp = Debe seleccionar un archivo a subir
 
 pntexReg = Registro insertado con exito
 pntexRegs = Registros insertados con exito
@@ -404,29 +222,12 @@ pntextRev = . Revise línea:
 
 # Opcion select 
 cat = Seleccione una opción
-cat1 = Categoria1
-cat2 = Categoria2
-cat3 = Categoria3
-cat4 = Categoria4
 roles = Roles
 opcrol = Opciones roles
 usr = Usuarios
-acccat1 = Acceso categoria1
-acccat2 = Acceso categoria2
-acccat3 = Acceso categoria3
-acccat4 = Acceso categoria4
-accrep = Acceso a reportes
-plan = Plan de cuentas
-asodim = Asociar dimensiones
-movcon = Histórico de transacciones contables
-reljer = Relación jerarquica gastos
 
 #---------------------bvt001-----------------------------------------------------------
 #---------------------------Contenedor
-bvt001tit = Reportes Disponibles
-bvt001Det = Detalle del reporte
-
-bvt001Grp = Agrupación de reportes: *
 bvt001Cod = Código: *
 bvt001Desc = Descripción: *
 bvt001Com = Comentario: *
@@ -938,54 +739,6 @@ mailtareaHoraRepF = Intérvalo minutos de repetición
 mailtareaOpciones = Opciones de envío
 mailtareaRutaOutReporte = URL de envío:*
 
-tabNombres = Definición
-tabPrograma = Programación
-tabEnvio = Datos de envío
-
-mailtareaDiario = Fecuencia diaria
-mailtareaSemanal = Frecuencia semanal
-mailtareaPersonalizada = Repetición por día de mes
-mailtareaHoraRep = Repetición por minutos
-
-mailtarealunes = Lunes
-mailtareamartes = Martes
-mailtareamiercoles = Miercoles
-mailtareajueves = Jueves
-mailtareaviernes = Viernes
-mailtareasabado = Sabado
-mailtareadomingo = Domingo
-
-mailidiap1 = Dia 1 de cada mes
-mailidiap2 = Dia 2 de cada mes
-mailidiap3 = Dia 3 de cada mes
-mailidiap4 = Dia 4 de cada mes
-mailidiap5 = Dia 5 de cada mes
-mailidiap6 = Dia 6 de cada mes
-mailidiap7 = Dia 7 de cada mes
-mailidiap8 = Dia 8 de cada mes
-mailidiap9 = Dia 9 de cada mes
-mailidiap10 = Dia 10 de cada mes
-mailidiap11 = Dia 11 de cada mes
-mailidiap12 = Dia 12 de cada mes
-mailidiap13 = Dia 13 de cada mes
-mailidiap14 = Dia 14 de cada mes
-mailidiap15 = Dia 15 de cada mes
-mailidiap16 = Dia 16 de cada mes
-mailidiap17 = Dia 17 de cada mes
-mailidiap18 = Dia 18 de cada mes
-mailidiap19 = Dia 19 de cada mes
-mailidiap20 = Dia 20 de cada mes
-mailidiap21 = Dia 21 de cada mes
-mailidiap22 = Dia 22 de cada mes
-mailidiap23 = Dia 23 de cada mes
-mailidiap24 = Dia 24 de cada mes
-mailidiap25 = Dia 25 de cada mes
-mailidiap26 = Dia 26 de cada mes
-mailidiap27 = Dia 27 de cada mes
-mailidiap28 = Dia 28 de cada mes
-mailidiap29 = Dia 29 de cada mes
-mailidiap30 = Dia 30 de cada mes
-
 mailimes1 = Mensual
 mailimes2 = Bimensual
 mailimes3 = Trimestral
@@ -1107,15 +860,6 @@ Sgc001aTbval = Tipo valor
 Sgc001aTbfec = Fecha cambio
 Sgc001aTbmeta = Meta   
 
-#---------------------------Sgc001b
-Sgc001btit = Historico de tolerancia inferior
-
-Sgc001bTbtoli = Tolerancia inf.   
-
-#---------------------------Sgc001c
-Sgc001ctit = Historico de tolerancia superior
-
-Sgc001cTbtols = Tolerancia sup. 
 
 #---------------------------Sgc003
 Sgc003tit = Valor de indicadores
@@ -1129,16 +873,6 @@ Sgc003Tbfec = Fecha de creación
 
 #---------------------------Sgc005
 Sgc005tit = Definición de compañias
-
-#---------------------------Sgc006
-Sgc006tit = Definición de areas
-
-sgc006cco = Centro de costos: *
-sgc006mail1 = Correo 1: 
-sgc006mail2 = Correo 2: 
-sgc006mail3 = Correo 3: 
-sgc006mail4 = Correo 4: 
-sgc006mail5 = Correo 5: 
 
 Sgc006tbcom = Compañias
 
@@ -1154,11 +888,6 @@ Sgc008tit = Seguridad de areas
 
 sgc008tbare = Areas
 
-#---------------------------Sgc009
-Sgc009tit = Seguridad de indicadores
-
-sgc009tbind = Indicadores
-
 #---------------------------Sgc010
 Sgc010tit = Definición de Administradores
 
@@ -1168,10 +897,6 @@ sgc010tbnco = Nombre completo
 
 #---------------------------Sgc012
 Sgc012tit = Elija una opción
-
-sgc012f16 = FAG016 - Matríz de Seguimiento de Objetivos
-sgc012f17 = FAG017 - Informe de Medición y Seguimiento a la Eficacia
-sgc012f18 = FAG024 - Indicadores por area
 
 sgc012iya = Investigación y Analisis: *
 sgc012rrh = Recursos Humanos: *
@@ -1195,19 +920,14 @@ Sgc012aTbfea = Fecha Compromiso
 Sgc012aTbpcu = % Cump.
 Sgc012aTbacc = Acción
 
-#---------------------------Sgc012b
-Sgc012btit = Carga de archivo
-
-Sgc012bTbfil = Nombre archivo
 
 #---------------------------Sgc012c
-Sgc012ctit = Bitácora de acciones
 
 sgc012cco = Comentario: *
 sgc012cfc = Fecha del comentario: *
 
 Sgc012aTbfco = Fecha de comentario
-Sgc012cTbbit = Bitácora
+
 
 #---------------------------Shausers
 Shauserstit = Creación de usuarios
@@ -1232,6 +952,7 @@ Shaincidenciastit = Accidentes semanales
 tipactit = Tipo de accidentes
 shasuctit = Sucursales
 shametastit = Metas de operadores
+sharazontit = Maestro de listado de razones por las que no fue reportado el accidente.
 
 shaincidenciasci = Cédula de identidad: * 
 shaincidenciasge = Genero: *
@@ -1242,12 +963,14 @@ shaincidenciasco = Centro operativo donde ocurrio el evento: *
 shaincidenciasar = Area especifica donde ocurrieron los hechos: *
 shaincidenciasti = Tipo de incapacidad: *
 shaincidenciasta = Tipo de accidente: *
+shaincidenciasrep = Reportado: *
+shaincidenciasraz = Razón por la que no fue reportado: *
 shaincidenciastl = Tipo de lesión: * 
 shaincidenciascu = Parte del cuerpo lesionada: *
 shaincidenciasde = Descripcion de los hechos: *
 shaincidenciasin = Código inpsasel: *
-shametasanio = Año calendario: *
-shametasmes = Mes calendario: *
+shametasanio = Año contable: *
+shametasmes = Mes contable: *
 shametasnum = Número de trabajadores con charla: *
 shametassuc = Sucursal: *
 shametashead = Headcount: *
@@ -1271,8 +994,8 @@ shaintipole = Tipo de lesión
 shainubiles = Ubicación de la lesión
 shainhechos = Descripcion de los hechos
 
-shametastbanio = Año calendario
-shametastbmes = Mes calendario
+shametastbanio = Año contable
+shametastbmes = Mes contable
 shametastbnum = Número de trabajadores con charla
 shametastbsuc = Sucursal
 shametastbhead = Headcount
