Desarrollo del nuevo modulo para crear, actualizar y eliminar tipos de lesiones en la aplicación de carga accidental semanal de SHA.

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -937,6 +937,7 @@ shauserscod = Código usuario: *
 shausersclu = Clave: *
 shauserstip = Tipo de usuario: *
 shauserslista = Sucursales 
+shalesion = Tipos de lesión
 
 Shauserstbcod = Código usuario
 Shauserstbdes = Nombre y apellido
@@ -953,6 +954,7 @@ tipactit = Tipo de accidentes
 shasuctit = Sucursales
 shametastit = Metas de operadores
 sharazontit = Maestro de listado de razones por las que no fue reportado el accidente.
+shalesiontit = Maestro de listado de tipos de lesiones
 
 shaincidenciasci = Cédula de identidad: * 
 shaincidenciasge = Genero: *
