Modulo para la carga maestro de las partes del cuerpo lesionada.

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -118,6 +118,7 @@ seg = Seguridad
  seg03 = Usuarios
  tipac = Tipo de accidente
  seg08 = Metas de operadores
+ shacuerpo = Partes del cuerpo
  razon01 = Listado de Razones
  seg09 = Acceso a botones
  pres05 = Compañías
@@ -955,6 +956,7 @@ shasuctit = Sucursales
 shametastit = Metas de operadores
 sharazontit = Maestro de listado de razones por las que no fue reportado el accidente.
 shalesiontit = Maestro de listado de tipos de lesiones
+shacuerpotit = Maestro de listado de partes del cuerpo lesioandas
 
 shaincidenciasci = Cédula de identidad: * 
 shaincidenciasge = Genero: *
