Modulo nuevo de Situacion de empleo

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -938,6 +938,7 @@ shauserscod = Código usuario: *
 shausersclu = Clave: *
 shauserstip = Tipo de usuario: *
 shauserslista = Sucursales 
+shasituacion = Situación del empleo
 shalesion = Tipos de lesión
 
 Shauserstbcod = Código usuario
@@ -957,6 +958,7 @@ shametastit = Metas de operadores
 sharazontit = Maestro de listado de razones por las que no fue reportado el accidente.
 shalesiontit = Maestro de listado de tipos de lesiones
 shacuerpotit = Maestro de listado de partes del cuerpo lesioandas
+shasituaciontit = Maestro de listado de situacion del empleo
 
 shaincidenciasci = Cédula de identidad: * 
 shaincidenciasge = Genero: *
@@ -977,6 +979,7 @@ shametasanio = Año contable: *
 shametasmes = Mes contable: *
 shametasnum = Número de trabajadores con charla: *
 shametassuc = Sucursal: *
+shametassitu = Situación del empleo: *
 shametashead = Headcount: *
 shametaspro = Promedio que recibio charla: *
 shametasreu = Número de reuniones de comite: *
