CAMBIO DEL LOGO Y ARREGLO DE LA COLUMNA DE BUSQUEDA DE VALORES POR FECHA.

--- a/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
+++ b/sha/src/org/sha/util/MessagesBundle_es_VEN.properties
@@ -12,7 +12,7 @@ logClIntroUsr = Introduzca un usuario
 loginuser = Para ingresar coloque usuario
 loginclave = Para ingresar coloque clave
 entrar = Login
-entrar2 = Indicadores sha - Login
+entrar2 = Indicadores ssst - Login
 entrar1 = Iniciar Sesión
 saludo = Bienvenido:
 olvidocl = ¿Olvidó Contraseña?
